--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -148,7 +148,7 @@
       li {
         h4 {
           font-size: 20px;
-          font-weight: 500;
+          font-weight: 400;
           margin-bottom: 8px;
         }
         .technology {
@@ -164,6 +164,12 @@
         }
       }
     }
+
+    &.aboutMe {
+      a {
+        color: #8c6ee9;
+      }
+    }
     
     @media (min-width: 768px) {
       padding: 48px;
@@ -174,5 +180,5 @@
         font-size: 28px;
       }
     }
-  }  
+  }
 }
