--- a/src/styles/components.module.css
+++ b/src/styles/components.module.css
@@ -63,3 +63,206 @@
     gap: 16px;
   }
 }
+
+
+.intro {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  
+  h2.title {
+    text-align: center;
+    
+    font-size: 24px;
+  }
+  
+  @media (min-width: 768px) {
+    h2.title {
+      font-size: 40px;
+    }
+  }
+}
+
+.buttonLike {
+  border: 1px solid black;
+  padding: 4px 8px;
+  border-radius: 8px;
+  gap: 12px;
+  transition-property: background-color;
+  transition-duration: 100ms;
+  transition-timing-function: ease;
+  &:hover {
+    background-color: var(--text-colour1) !important;
+  }
+}
+
+.category {
+  width: 100%;
+  
+/*    background-color: var(--bg-colour1);*/
+  padding: 16px 32px;
+  border-radius: 16px;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  .title {
+    font-weight: 500;
+    color: var(--text-colour0);
+    margin-bottom: 12px;
+    width: 100%;
+    font-size: 20px;
+  }
+  
+  p {
+    font-size: 16px;
+    color: var(--text-colour1);
+    font-weight: 300;
+    width: 100%;
+  }
+  
+  .findMe {
+    margin-top: 16px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 16px;
+  }
+  
+  img {
+    width: 32px;
+    flex-shrink: 0;
+  }
+  
+  @media (min-width: 768px) {
+    padding: 48px;
+    p {
+      font-size: 22px;
+    }
+    .title {
+      font-size: 28px;
+    }
+  }
+}
+
+.technologies {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  li {
+    h4 {
+      font-size: 20px;
+      font-weight: 400;
+      margin-bottom: 8px;
+    }
+    .technology {
+      li {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        padding: 8px;
+        p {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
+
+.projectGrid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 16px;
+  
+  li {
+    border: 1px solid black;
+    padding: 16px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    
+    h4 {
+      color: var(--text-colour1);
+      font-weight: 400;
+      font-size: 18px;
+    }
+    
+    p {
+      font-size: 16px;
+    }
+    
+    .links {
+      margin-top: 8px;
+      display: flex;
+      gap: 8px;
+      
+      a {
+        display: flex;
+        align-items: center; 
+        
+        img {
+          width: 24px;
+          height: 24px;
+        }
+        
+        p {
+          color: var(--text-colour0);
+          font-size: 12px;
+        }
+        
+        &:hover {
+          p {
+            color: var(--bg-colour0);
+          }
+        }
+      }
+    }
+  }
+  
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    
+    li {
+      h4 {
+        font-size: 20px;
+      }
+      
+      .links a p {
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+.contactMeForm {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+
+  input, textarea {
+    border-radius: 8px;
+    border: 1px solid gray;
+    padding: 16px;
+    font-size: 16px;
+  }
+
+  textarea {
+    resize: none;
+  }
+
+  button {
+    padding: 12px;
+    align-self: end;
+    border: 1px solid gray;
+    border-radius: 8px;
+    background-color: transparent;
+    font-size: 16px;
+
+    &:hover {
+      color: var(--bg-colour0);
+    }
+  }
+}
