--- a/src/styles/components.module.css
+++ b/src/styles/components.module.css
@@ -1,8 +1,10 @@
 .topBar {
   display: flex;
-  justify-content: space-between;
+  gap: 16px;
+  justify-content: center;
   align-items: center;
   margin: 0 auto;
+  flex-wrap: wrap;
   
   a.title {
     color: var(--text-colour0);
@@ -14,7 +16,7 @@
   
   a {
     color: var(--text-colour1);
-    font-size: 16px;
+    font-size: 14px;
     display: block;
     position: relative;
     padding: 4px 0px;
@@ -61,6 +63,11 @@
   .links {
     display: flex;
     gap: 16px;
+  }
+  
+  @media (min-width: 768px) {
+    justify-content: space-between;
+    flex-wrap: nowrap;
   }
 }
 
