--- a/src/styles/components.module.css
+++ b/src/styles/components.module.css
@@ -243,6 +243,15 @@
   }
 }
 
+.aboutMe {
+  a {
+    color: #8c6ee9;
+    &:visited {
+      color: #8c6ee9;
+    }
+  }
+}
+
 .contactMeForm {
   display: flex;
   flex-direction: column;
