--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,9 +35,13 @@ input, textarea, button {
 }
 
 #root {
-  padding: 16px 32px;
+  padding: 16px;
   max-width: 786px;
   margin: 0 auto;
+
+  @media (min-width: 768px) {
+    padding: 16px 12px;
+  }
 }
 
 body {
