Removed Social App project because it is broken and will take time to fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "Exo";
-  src: url("./font/Exo_2/Exo2-VariableFont_wght.ttf"),
+  src: url("./font/Exo_2/Exo2-VariableFont_wght.ttf");
 }
 
 :root {
